# mochi-esp

./: .gitignore  .vtignore  README.md  main.tsx
.github/workflows/: firmware-build.yml  firmware-release.yml  pages.yml
.vt/: state.json
design/: 00-architecture.md  01-bring-up-plan.md  02-boot-sequence.md  03-provisioning.md  04-pairing.md  05-sprite-format.md  06-scene-contracts.md  07-voice-architecture.md  08-ota-updates.md  09-deep-review-2026-05-20.md  10-qr-codes.md  11-m11-pet-state-in-c.md  12-thought-bubble.md  13-build-time-asset-packs.md  14-mpk1-edges-and-actions.md  15-device-sprite-consolidation.md  15-on-device-imagine.md  16-on-device-imagine.md  17-location-embodiment.md  18-device-observability.md  19-studio-world-consolidation.md  20-splash-and-chrome-zones.md  21-nonblocking-wifi.md  22-settings-actions-and-sleep.md  23-voice-ux-and-latency.md  24-device-substrate.md  25-review-2026-05-28-tap-render-cleanup.md  26-idle-and-light-sleep.md  27-voice-tool-observability-and-admin.md  28-scene-replan-and-place-cells.md  29-nav-place-prefetch.md  30-ui-sprites-menu-stats.md
firmware/: CMakeLists.txt  README.md  TOOLCHAIN.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/: README.md
firmware/components/codec_board/: board_cfg.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  battery.cpp  battery.h  board_pins.h  compositor.cpp  compositor.h  consolidate.c  consolidate.h  decay.c  decay.h  dev_menu.cpp  dev_menu.h  device_diag.c  device_diag.h  device_pair.cpp  device_pair.h  engagement.c  engagement.h  epd_ui.cpp  epd_ui.h  event_log.c  event_log.h  factory_reset.cpp  factory_reset.h  font8x8.cpp  font8x8.h  i2c_bus.cpp  i2c_bus.h  idf_component.yml  imagine.c  imagine.h  key_portal.cpp  key_portal.h  lvgl_port.cpp  lvgl_port.h  main.cpp  mochi_pack.h  model_prefs.c  model_prefs.h  (+48 more)
firmware/main/assets/: README.md  pet_a.mpk  scenes_a.mpk  splash.mpk
firmware/main/voice/: esp_peer_signaling.h  openai_signaling.c  openai_signaling.h  peer_log_shim.c  voice_aec.c  voice_aec.h  voice_diag.c  voice_diag.h  voice_https.c  voice_https.h  voice_mic.c  voice_mic.h  voice_peer.c  voice_peer.h  voice_tools.c  voice_tools.h  voice_ui.c  voice_ui.h
firmware/scripts/: refresh-splash.sh  setup-esp-idf.sh  verify-mpk.py
firmware/test/: mpk_host_test.c
site/: index.html
site/assets/: theme.css
site/tools/: index.html  sprite-forge.html
